# rdmatop

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  ppa-publish.yml  release.yml
debian/: changelog  control  rules
examples/nccl/: README.md  nccl.sbatch
examples/nixl/: README.md  nixl.sbatch
examples/nvshmem/: README.md  nvshmem.sbatch
examples/pplx/: Dockerfile  README.md  pplx.sbatch
examples/rdma/: README.md  rdma.sh
src/: main.rs  net.rs  netlink.rs  rdma.rs  stat.rs
src/tui/: app.rs  events.rs  theme.rs  ui.rs
